# texttoanimation

./: .env.dual_model_template  .gitignore  DUAL_MODEL_GUIDE.md  Dockerfile  README.md  SYNTAX_FIX.md  VISUAL_LAYOUT_FIXES.md  api_server.py  check_env.py  concat_list.txt  fix_dvisvgm.sh  flowchart_render.html  install_latex.sh  layout_test_script.py  list_models.py  proposed_flowchart_render.html  pyproject.toml  reproduce_issue.py  reproduce_issue_fixed.py  reproduce_particle_box.py  requirements.txt  scene_078efaac-0cc3-4536-a02e-57efc77c78ae.py  scene_133449e6-c9a9-4438-a684-061eaa6ab4b9.py  scene_19a35b4e-e46d-44e1-8d28-116dcd7b56c0.py  scene_1b8332bd-8a14-4422-a933-843566555baa.py  scene_1cb0dc0b-4fa2-4330-9624-7a4ce0c999af.py  scene_27c8a5a5-d393-4ce9-b098-73f9666d7e0a.py  scene_32792f2c-1784-4d77-b9c1-6dbfad10f0d5.py  scene_47bc54f1-56b9-41bd-9b07-66a3d9ca8a9e.py  scene_64a21b54-3c84-46e6-8368-94ff2b30dfa3.py  scene_7363d89b-b98c-4694-bcb6-9c86a38b793b.py  scene_800bd134-3034-4438-8888-c5d84f3abb15.py  scene_8171a6bf-9f34-4526-b090-365a184eca58.py  scene_996e022c-0b79-4b6a-944b-61d75f5f0260.py  scene_ab1595ad-380f-4339-891e-cbbe3155c313.py  scene_e84af868-c5dd-49c6-abea-4a4c96244ef5.py  scene_f7385667-c13a-4f41-b92b-c98c3d8dc3a7.py  verification_report.json  verified_flowchart_render.html  verify_gtts.py  (+1 more)
docs/: IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md
frontend/: README.md  package-lock.json  package.json
jobs/: 078efaac-0cc3-4536-a02e-57efc77c78ae.json  133449e6-c9a9-4438-a684-061eaa6ab4b9.json  19a35b4e-e46d-44e1-8d28-116dcd7b56c0.json  (+14 more)
(+207 files in other folders)
